After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760936 - dash, mpdparser: Fix the bug when getting the URL of index segment by SegmentBase
dash, mpdparser: Fix the bug when getting the URL of index segment by Segment...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-21 14:17 UTC by WeiChungChang
Modified: 2016-01-22 15:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.09 KB, patch)
2016-01-21 14:17 UTC, WeiChungChang
committed Details | Review

Description WeiChungChang 2016-01-21 14:17:00 UTC
Created attachment 319500 [details] [review]
patch

dash, mpdparser: Fix the bug when getting the URL of index segment by SegmentBase.

Current flow we get index segment from "Initialization" but it is wrong since the URL is of the initialization Segment.
In fact, we should get it by "RepresentationIndex".

The fix is as attached; please refer to ISO/IEC 23009-1: 5.3.9.2 Table 11.
Comment 1 Sebastian Dröge (slomo) 2016-01-22 15:47:09 UTC
commit 8e788f284508612982e8e38336eed676c2eec35a
Author: John Chang <r97922153@gmail.com>
Date:   Thu Jan 21 22:00:44 2016 +0800

    mpdparser: Use RepresentationIndex instead of Initialization to get the URL of the RepresentationIndex
    
    https://bugzilla.gnome.org/show_bug.cgi?id=760936