mpdparser: Use RepresentationIndex instead of Initialization to get the URL of the RepresentationIndex

https://bugzilla.gnome.org/show_bug.cgi?id=760936